mdapipkg/unpackaged/objects/sa_details__c.object
<CustomObject>
    <fields>
        <fullName>Customer_handled__c</fullName>
        <label>Customer handled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specilization__c</fullName>
        <label>Specilization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>sa details</relationshipLabel>
        <relationshipName>sa_details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>sa details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>SA- {00000}</displayFormat>
        <label>sa details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>sa details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>